cobble together some icons, change item/bench icons, rig up showing item different if gotten/not, item visibility fixes

--- a/Web/style.css
+++ b/Web/style.css
@@ -79,49 +79,60 @@ svg { user-select: none; }
 	stroke-dasharray: none;
 }
 
+.hitbox {
+	stroke: none;
+	fill: transparent;
+}
 
 .roomItem { display: none; }
-.roomItem > rect {
-	stroke: white;
-	stroke-width: .5px;
-	fill: transparent;
-	width: 5px;
-	height: 5px;
-	transform: rotate(45deg) translate(-3px, -3px);
+.roomItem {
+	stroke: none;
+	fill: white;
+	opacity: .8;
 }
-.roomItem:hover > rect {stroke-width: 1px;}
+.roomItem.got {
+	/* fill: green; */
+	fill: black;
+	filter: url(#filter-white-shadow);
+}
+.roomItem:hover {
+	opacity: 1;
+	stroke: white;
+	stroke-width: 1px;
+}
 
-body.showItemsInPool-Boss_Geo .roomItem { display: unset; }
-body.showItemsInPool-Charm .roomItem { display: unset; }
-body.showItemsInPool-Cocoon .roomItem { display: unset; }
-body.showItemsInPool-Cursed .roomItem { display: unset; }
-body.showItemsInPool-CursedNail .roomItem { display: unset; }
-body.showItemsInPool-Dreamer .roomItem { display: unset; }
-body.showItemsInPool-Egg .roomItem { display: unset; }
-body.showItemsInPool-Essence_Boss .roomItem { display: unset; }
-body.showItemsInPool-Flame .roomItem { display: unset; }
-body.showItemsInPool-Geo .roomItem { display: unset; }
-body.showItemsInPool-Grub .roomItem { display: unset; }
-body.showItemsInPool-Key .roomItem { display: unset; }
-body.showItemsInPool-Lore .roomItem { display: unset; }
-body.showItemsInPool-Map .roomItem { display: unset; }
-body.showItemsInPool-Mask .roomItem { display: unset; }
-body.showItemsInPool-Notch .roomItem { display: unset; }
-body.showItemsInPool-Ore .roomItem { display: unset; }
-body.showItemsInPool-PalaceLore .roomItem { display: unset; }
-body.showItemsInPool-PalaceSoul .roomItem { display: unset; }
-body.showItemsInPool-Relic .roomItem { display: unset; }
-body.showItemsInPool-Rock .roomItem { display: unset; }
-body.showItemsInPool-Root .roomItem { display: unset; }
-body.showItemsInPool-Skill .roomItem { display: unset; }
-body.showItemsInPool-Soul .roomItem { display: unset; }
-body.showItemsInPool-Stag .roomItem { display: unset; }
-body.showItemsInPool-Vessel .roomItem { display: unset; }
+body.showItemsInPool-Boss_Geo .pool-Boss_Geo { display: unset; }
+body.showItemsInPool-Charm .pool-Charm { display: unset; }
+body.showItemsInPool-Cocoon .pool-Cocoon { display: unset; }
+body.showItemsInPool-Cursed .pool-Cursed { display: unset; }
+body.showItemsInPool-CursedNail .pool-CursedNail { display: unset; }
+body.showItemsInPool-Dreamer .pool-Dreamer { display: unset; }
+body.showItemsInPool-Egg .pool-Egg { display: unset; }
+body.showItemsInPool-Essence_Boss .pool-Essence_Boss { display: unset; }
+body.showItemsInPool-Flame .pool-Flame { display: unset; }
+body.showItemsInPool-Geo .pool-Geo { display: unset; }
+body.showItemsInPool-Grub .pool-Grub { display: unset; }
+body.showItemsInPool-Key .pool-Key { display: unset; }
+body.showItemsInPool-Lore .pool-Lore { display: unset; }
+body.showItemsInPool-Map .pool-Map { display: unset; }
+body.showItemsInPool-Mask .pool-Mask { display: unset; }
+body.showItemsInPool-Notch .pool-Notch { display: unset; }
+body.showItemsInPool-Ore .pool-Ore { display: unset; }
+body.showItemsInPool-PalaceLore .pool-PalaceLore { display: unset; }
+body.showItemsInPool-PalaceSoul .pool-PalaceSoul { display: unset; }
+body.showItemsInPool-Relic .pool-Relic { display: unset; }
+body.showItemsInPool-Rock .pool-Rock { display: unset; }
+body.showItemsInPool-Root .pool-Root { display: unset; }
+body.showItemsInPool-Skill .pool-Skill { display: unset; }
+body.showItemsInPool-Soul .pool-Soul { display: unset; }
+body.showItemsInPool-Stag .pool-Stag { display: unset; }
+body.showItemsInPool-Vessel .pool-Vessel { display: unset; }
 
-.bench {
-	stroke: blue;
-	width: 3px;
-	height: 3px;
+#icon-bench {
+	stroke: black;
+	stroke-width: .2px;
+	fill: rgb(141, 141, 141);
+	transform: scale(2);
 }
 
 .mapNode {
